[IMP] runbot_merge: fix dropdown colors for dark mode
Much like the alerts and tables bootstrap's dropdowns don't bother
using CSS variables so don't react correctly to the color theme.

Fix them up by updating their CSS rules to use the relevant
variables. They can't be manipulated via their SCSS variables because
there's a bunch of other pieces of code (e.g. odoo theming shit) which
wants to manipulate the dropdown colors in SCSS so using CSS vars
break them.

--- a/runbot_merge/static/scss/revariable.scss
+++ b/runbot_merge/static/scss/revariable.scss
@@ -68,10 +68,6 @@ h1, h2, h3, h4, h5, h6{
   color: inherit;
 }
 
-.dropdown-item, .dropdown-menu, .dropdown-menu a {
-  color: inherit;
-}
-
 .navbar-light {
   background-color: var(--body-bg);
   color: inherit;
@@ -107,5 +103,18 @@ h1, h2, h3, h4, h5, h6{
     &.table-active {
       --table-bg: color-mix(in oklch, #{$c} 85%, var(--#{$category}));
     }
+  }
+}
+
+.dropdown-menu {
+  color: var(--body-color);
+  background-color: var(--body-bg);
+}
+.dropdown-item {
+  color: color-mix(in srgb, var(--link-color) 85%, var(--light));
+  &:hover, &:focus {
+    color: color-mix(in srgb, var(--link-color), var(--dark));
+    // TODO: doesn't work for statuses (doesn't combine with .bg-{category}
+    background-color: oklch(from var(--dark) l c h / 0.1);
   }
 }
